[package]
name = "megalith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.1", features = ["dynamic_linking"] }
bevy_egui = "0.26.0"
egui = "0.27.2"
leafwing-input-manager = "0.13.3"
thiserror = "1.0.58"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3